# aoc-2022

./: .gitignore  Cargo.toml  README.md
day_01/src/: lib.rs
day_02/: Cargo.toml
day_02/src/: lib.rs
day_03/src/: lib.rs
day_04/src/: lib.rs
day_05/: Cargo.toml
day_05/src/: lib.rs
day_06/: Cargo.toml
day_06/src/: lib.rs
day_07/: Cargo.toml
day_07/src/: lib.rs
day_08/: Cargo.toml
day_08/src/: lib.rs
day_09/: Cargo.toml
day_09/src/: lib.rs
day_10/: Cargo.toml
day_10/src/: lib.rs
src/: main.rs
