[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"
authors = ["jay3332"]

[dependencies]
dotenv_codegen = "0.15.0"
getopts = "0.2.21"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

# IMPORTANT: put [workspace] as the last section of this file
[workspace]
members = [
    "runner",
    "day_01",
    "day_02",
    "day_03",
    "day_04",
    "day_05",
    "day_06",
    "day_07",
]